<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_menu_today"
            android:title="@string/menu_today" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_edit_profile"
            android:title="@string/menu_edit_profile" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
    </group>

    <item android:title="Topics">
        <menu>
            <item
                android:id="@+id/nav_show_all"
                android:icon="@drawable/ic_menu_show_all"
                android:title="@string/menu_show_all" />
            <item
                android:id="@+id/nav_topic_0"
                android:icon="@drawable/ic_menu_show_all"
                android:title="@string/menu_topic_0" />
            <item
                android:id="@+id/nav_topic_1"
                android:icon="@drawable/ic_menu_show_all"
                android:title="@string/menu_topic_1" />
            <item
                android:id="@+id/nav_topic_2"
                android:icon="@drawable/ic_menu_show_all"
                android:title="@string/menu_topic_2" />
            <item
                android:id="@+id/nav_topic_3"
                android:icon="@drawable/ic_menu_show_all"
                android:title="@string/menu_topic_3" />
        </menu>
    </item>

</menu>
