<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/init_headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:text="@string/login_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/init_headline">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="100dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="6dp"
                    android:src="@drawable/ic_launcher_background"/>

                <ImageView
                    android:id="@+id/init_profile_picture"
                    android:src="@drawable/frame"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/init_pick_profile_picture"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:padding="4dp"
                    android:text="@string/init_change_profile_picture"
                    android:textAlignment="viewStart"
                    android:textColor="@color/systemBlue"
                    android:visibility="visible"
                    android:textAllCaps="false"
                    tools:visibility="visible" />
                <Button
                    android:id="@+id/init_take_profile_picture"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:padding="4dp"
                    android:text="@string/init_take_profile_picture"
                    android:textAlignment="viewStart"
                    android:textColor="@color/systemBlue"
                    android:visibility="visible"
                    android:textAllCaps="false"
                    tools:visibility="visible" />
                ></LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/init_display_name"
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your Displayed Name"
            android:inputType="textAutoCorrect" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">>

        <Button
            android:id="@+id/init_notMeButton"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="4dp"
            android:text="@string/init_not_me"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/systemRed"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:id="@+id/init_next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/bk_corner_radius_blue"
            android:padding="4dp"
            android:text="@string/init_button_finish"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/systemBackground"
            android:textSize="18sp"
            android:visibility="visible"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>